test/modules/shadowing/issue-19167-2-f.good
issue-19167-2-f.chpl:14: error: 'x' has multiple definitions in this scope
issue-19167-2-f.chpl:15: note: it was first defined through the 'use' statement here
issue-19167-2-f.chpl:3: note: leading to the definition here
issue-19167-2-f.chpl:16: note: redefined through the 'use' statement here
issue-19167-2-f.chpl:11: note: and then through the 'use' statement here
issue-19167-2-f.chpl:7: note: leading to the definition here
